-JUnit 4 for raster -GEOT-2466 -some sparse clean up (more to do)
git-svn-id: http://svn.osgeo.org/geotools/trunk@32922 e5c1c795-43da-0310-a71f-fac65c449510